0.40	- 2013-07-23, H.Merijn Brand
    * fix version references in doc

0.39	- 2013-06-28, H.Merijn Brand
    * Use f_file in docs. file is deprecated
    * DBD::CSV's repository moved to github
    * Add test for row-completeness
    * Fix UTF-8 tests to better follow Text::CSV_XS auto-encoding
    * Require more recent versions of low level modules that fixe
      issues reported for DBD::CSV
    * Development will also do mosts tests with DBI_SQL_NANO=1
    * Added support for f_dir_search from DBD::File (in fact DBI was
      changed to feature this for DBD::CSV :)
    * Fix test relying on spell-error in DBI's error message
    * Document csv_class (still undertested)

0.38	- 2013-01-09, H.Merijn Brand
    * the tar paxheaders hit again (http://www.perlmonks.org/?node_id=1004571)

0.37	- 2013-01-09, H.Merijn Brand
    * Fixed RT#80078, resulting in getline calls on undef (Benjamin Booth)
    * Require latest DBI and SQL::Statement
    * Updated copyright to 2013
    * Fixes for DBI-1.623 (Jens Rehsack)

0.36	- 2012-08-22, H.Merijn Brand
    * Add line/record number and position in error messages

0.35	- 2012-05-24, H.Merijn Brand
    * Improved documentation (including mje's contribution)
    * Tested under 5.16.0 (installed)

0.34	- 2012-05-12, H.Merijn Brand
    * Updated copyright to 2012
    * Require 5.8.1, as DBI does
    * Tested against perl-5.16.0-RC0 + DBI-1.620

0.33	- 2011-09-07, H.Merijn Brand
    * NAME / DISTNAME in Makefile.PL

0.32	- 2011-09-07, H.Merijn Brand
    * TYPE should be numeric
    * Added tests for return count of delete statements in do
    * Upped copyright to 2011
    * Added tests for return count of update statements (Peter Rabbitson)
    * Try to catch (more) usernames on Windows as schema names
    * More cross-checks for META data

0.31	- 2010-09-18, H.Merijn Brand
    * Require 5.8.1 (effectively already doing so by requiring DBI-1.614)
    * Update tests to use warnings and done_testing ()