@@ -11,10 +11,11 @@ my $pwd = getcwd;
 BEGIN { use_ok ("DBI") }
 require "t/lib.pl";
 
+my $root_temp = $^O eq "MSWin32" ? "C:/Temp" : "/tmp";
 my $dbh = DBI->connect ("dbi:CSV:", undef, undef, {
     f_schema         => undef,
     f_dir            => DbDir (),
-    f_dir_search     => [ "t", "/tmp" ],
+    f_dir_search     => [ "t", $root_temp ],
     f_ext            => ".csv/r",
     f_lock           => 2,
     f_encoding       => "utf8",
@@ -25,13 +26,22 @@ my $dbh = DBI->connect ("dbi:CSV:", undef, undef, {
     }) or die "$DBI::errstr\n";
 
 my @dsn = $dbh->data_sources;
-my %dir = map { m{^dbi:CSV:.*\bf_dir=([^;]+)}i; ($1 => 1) } @dsn;
+my %dir = map {
+    m{^dbi:CSV:.*\bf_dir=([^;]+)}i;
+    my $folder = $1;
+    # Unixify Windows paths
+    $folder =~ s{^([A-Z])\\?:}{$1:};
+    $folder =~ s{\\+}{/}g;
+    ($folder => 1);
+    } @dsn;
 
 # Use $test_dir
 $dbh->do ("create table foo (c_foo integer, foo char (1))");
 $dbh->do ("insert into foo values ($_, $_)") for 1, 2, 3;
 
-is ($dir{$_}, 1, "DSN for $_") for $pwd."/output", qw( t /tmp );
+my @test_dirs = ($pwd."/output", "t");
+$^O eq "VMS" or push @test_dirs, $root_temp;
+is ($dir{$_}, 1, "DSN for $_") for @test_dirs;
 
 my %tbl = map { $_ => 1 } $dbh->tables (undef, undef, undef, undef);
 
